[tool.poetry]
name = "Simple Hangman Discord Bot"
version = "0.1.0"
description = "Play Hangman through the chat with this bot!"
authors = ["Nathan Aronson and Ryan Schaeffer"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"